Use SvelteKit assets path placeholder for static files

--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,9 @@
         <meta
             name="description"
             content="Appwrite is an open-source platform for building applications at any scale, using your preferred programming languages and tools." />
-        <link rel="icon" type="image/svg+xml" href="/console/logos/appwrite-icon.svg" />
-        <link rel="mask-icon" type="image/png" href="/console/logos/appwrite-icon.png" />
-        <link rel="stylesheet" href="/console/css/loading.css" />
+        <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/logos/appwrite-icon.svg" />
+        <link rel="mask-icon" type="image/png" href="%sveltekit.assets%/logos/appwrite-icon.png" />
+        <link rel="stylesheet" href="%sveltekit.assets%/css/loading.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         %sveltekit.head%
     </head>
@@ -40,13 +40,13 @@
                 <div></div>
             </div>
             <img
-                src="/console/images/appwrite-logo-light.svg"
+                src="%sveltekit.assets%/images/appwrite-logo-light.svg"
                 width="120"
                 height="22"
                 class="logo-light"
                 alt="Appwrite Logo" />
             <img
-                src="/console/images/appwrite-logo-dark.svg"
+                src="%sveltekit.assets%/images/appwrite-logo-dark.svg"
                 width="120"
                 height="22"
                 class="logo-dark"
