Add embedded route detection and styling
Here's a concise commit message that summarizes the changes: Add
embedded route detection and UI styling

Check if the current route is in the /embed/ path and style
appropriately. Add embedded views for auth, messaging, databases, and
storage sections.

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,12 @@
     </head>
     <body data-sveltekit-preload-data="hover" data-loading="true">
         <script>
+            // Check if this is an embedded route
+            if (window.location.pathname.includes('/embed/')) {
+                document.body.setAttribute('data-embed', 'true');
+                document.documentElement.setAttribute('data-embed', 'true');
+            }
+
             let themeInUse = 'auto';
             const appwrite = localStorage.getItem('appwrite');
 
