feat: add Apple touch icons and metadata for iOS/iPadOS support

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,30 @@
             content="Appwrite is an open-source platform for building applications at any scale, using your preferred programming languages and tools." />
         <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/logos/appwrite-icon.svg" />
         <link rel="mask-icon" type="image/png" href="%sveltekit.assets%/logos/appwrite-icon.png" />
+
+        <!-- apple touch icons for ios/ipados -->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="%sveltekit.assets%/logos/apple-touch-icon-180x180.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="167x167"
+            href="%sveltekit.assets%/logos/apple-touch-icon-167x167.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="%sveltekit.assets%/logos/apple-touch-icon-152x152.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="120x120"
+            href="%sveltekit.assets%/logos/apple-touch-icon-120x120.png" />
+
+        <!-- apple web app meta tags -->
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-title" content="Appwrite Console" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
         <link rel="stylesheet" href="%sveltekit.assets%/css/loading.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         %sveltekit.head%
