--- a/src/app.html
+++ b/src/app.html
@@ -12,25 +12,7 @@
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover" data-loading="true">
-        <script>
-            let themeInUse = 'auto';
-            const appwrite = localStorage.getItem('appwrite');
-
-            if (appwrite) {
-                try {
-                    const localPrefs = JSON.parse(appwrite);
-                    if (localPrefs) themeInUse = localPrefs.theme;
-                } catch (ignore) {
-                    // Ignore any errors during JSON parsing
-                }
-            }
-
-            const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-            themeInUse =
-                themeInUse === 'auto' ? (systemPrefersDark ? 'dark' : 'light') : themeInUse;
-
-            document.body.setAttribute('class', `theme-${themeInUse}`);
-        </script>
+        <script src="%sveltekit.assets%/js/theme-loader.js"></script>
         <div id="svelte">%sveltekit.body%</div>
         <div class="page-loader">
             <div class="animation">
