--- a/src/app.html
+++ b/src/app.html
@@ -76,5 +76,6 @@
                 class="logo-dark"
                 alt="Appwrite Logo" />
         </div>
+        <button onclick="alert('Browser extension clicked!')" style="position: fixed; top: 50px; right: 50px; z-index: 100000; background-color: red; color: white; padding: 30px 60px; border: 3px solid yellow; border-radius: 8px; cursor: pointer; font-size: 24px; font-weight: bold; box-shadow: 0 4px 8px rgba(0,0,0,0.5); pointer-events: auto;">1PASSWORD TEST</button>
     </body>
 </html>
